--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ http://www.templatemo.com/tm-403-karma
     <meta name="author" content="templatemo">
     <meta charset="UTF-8">
 
-    <link href='http://fonts.googleapis.com/css?family=Comfortaa:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Comfortaa:400,700' rel='stylesheet' type='text/css'>
 
     <!-- CSS Bootstrap & Custom -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -321,8 +321,8 @@ http://www.templatemo.com/tm-403-karma
                 </div> <!-- /.row -->
                 
                 <div class="row">
-                    <div class="col-md-8 col-sm-6 col-xs-6">
-                        <p><iframe style='width:1150;height:600px' src="https://padlet.com/dentrepreneur2017/dqo98qlx24w7" style=width:100% height=auto; seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
+                    <div class="col-md-8 col-xs-6 col-sm-6 ">
+                        <p><iframe style='width:1150px;height:600px' src="https://padlet.com/dentrepreneur2017/dqo98qlx24w7" style=width:100% height=auto; seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
 
 
                       <!-- spacing for mobile viewing --><br><br>
@@ -469,7 +469,7 @@ http://www.templatemo.com/tm-403-karma
   <script src="js/templatemo_custom.js"></script>
   <script defer src="slider/jquery.flexslider.js"></script>
 <!--- Map--->
-<script src="http://maps.googleapis.com/maps/api/js?key=your_key"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=your_key"></script>
    
   
   
