--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@ http://www.templatemo.com/tm-403-karma
   <script src="js/templatemo_custom.js"></script>
   <script defer src="slider/jquery.flexslider.js"></script>
 <!--- Map--->
-<script src="https://maps.googleapis.com/maps/api/js?key=your_key"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzd2TMrJN_AbnBi9jux__Dwixt8Ku3V4A"></script>
    
   
   
