--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ http://www.templatemo.com/tm-403-karma
                   <div class="portfolio-thumb">
                     <img src="images/youtube-play.png" alt="portfolio image 3" class="img-responsive">
                     <div class="overlay-p">
-                      <a href="https://www.youtube.com/watch?v=KqJs_NHjV14">
+                      <a href="https://www.youtube.com/watch?v=HQtZ4kud2qA">
                         <h2 align="middle">Video Three</h2>
                         <p align="middle">THINK DIFFERENT - Motivation [STEVE JOBS]</p> 
                       </a>
@@ -240,7 +240,7 @@ http://www.templatemo.com/tm-403-karma
                   <div class="portfolio-thumb">
                     <img src="images/youtube-play.png" class="img-responsive">
                     <div class="overlay-p">
-                      <a href="#">
+                      <a href="https://www.youtube.com/watch?v=fDQTFBOdFAM">
                         <h2 align="middle">Fourth Title</h2>
                         <p align="middle">Motivation - Billionaires #1</p> 
                       </a>
@@ -253,7 +253,7 @@ http://www.templatemo.com/tm-403-karma
                   <div class="portfolio-thumb">              
                     <img src="images/youtube-play.png" class="img-responsive">
                     <div class="overlay-p">
-                      <a href="#">
+                      <a href="https://www.youtube.com/watch?v=x4eMipgOgkI">
                         <h2 align="middle">Fifth Title</h2>
                         <p align="middle">Motivation - Billionaires #2</p> 
                       </a>
@@ -266,7 +266,7 @@ http://www.templatemo.com/tm-403-karma
                   <div class="portfolio-thumb">
                     <img src="images/youtube-play.png" class="img-responsive">
                     <div class="overlay-p">
-                      <a href="#">
+                      <a href="https://www.youtube.com/watch?v=bZQA9-fVIDo">
                         <h2 align="middle">Sixth Title</h2>
                         <p align="middle" >Motivation - Billionaires #3</p> 
                       </a>
